# Korea-Railroad-project

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  docker-compose.yml  readme.md  requirements.txt
25y_automatic_lifter-master/25y_automatic_lifter-master/: .gitignore  README.md  pyproject.toml
25y_automatic_lifter-master/25y_automatic_lifter-master/CAN/: README.md  control_forklift.py  control_forklift_v2.py
25y_automatic_lifter-master/25y_automatic_lifter-master/_docs/history/: 2026-06-04.md
25y_automatic_lifter-master/25y_automatic_lifter-master/autolifter/: loading.py  truckalignment.py  unloadling.py
25y_automatic_lifter-master/25y_automatic_lifter-master/depth_cam/: BRINGUP_TRUCK.md  README.md  logger.py  main_rec.py  requirements.txt  save_rgbd.py  truck_main.py  verify_depth_fusion.py
25y_automatic_lifter-master/25y_automatic_lifter-master/depth_cam/calib/: config.py  control.py  dope_inference.py  fsm.py  geometry.py  hud.py  pose6d_adapter.py  utils.py  yolo_inference.py
25y_automatic_lifter-master/25y_automatic_lifter-master/depth_cam/tests_can/: conftest.py  test_bus_reliability.py  test_golden_driving.py  test_mission_lift.py  test_truck_machine_e2e.py  test_truck_perception.py
25y_automatic_lifter-master/25y_automatic_lifter-master/drone/: README.md  requirements.txt
25y_automatic_lifter-master/25y_automatic_lifter-master/eval/: README.md  eval_gui.py  eval_motion.py  fit_fwd_model.py  imu_yaw.py  run_gui.sh
25y_automatic_lifter-master/25y_automatic_lifter-master/forklift_ctrl/: __init__.py  controller.py  exceptions.py  types.py
(+496 files in other folders)
