[project]
name = "forklift-ctrl"
version = "0.1.0"
description = "Async CAN-based autonomous forklift controller"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# 찾을 패키지를 명시(자동 디스커버리 막기)
packages = ["forklift_ctrl"]
